fixed layout issues

--- a/index.css
+++ b/index.css
@@ -2,28 +2,32 @@ body {
     background-color: #1b1d1f;
     font-family: 'Open Sans', sans-serif;
     color:aliceblue;
-    font-size: 17px;
+    font-size: 22px;
+    display: grid;
+    grid-template-columns: auto 900px auto;
 }
 
 main {
+    grid-column: 2 / 3;
     display: block;
     text-align: center;
 }
 
 h1, h2, h3 {
     font-family: 'Raleway', sans-serif;
+    width: 100%
 }
 
 h1 {
-    font-size: 2rem;
+    font-size: 4rem;
 }
 
 h2 {
-    font-size: 1.33rem
+    font-size: 3rem;
 }
 
 h3 {
-    font-size: 1.125rem;
+    width: 80%
 }
 
 
@@ -31,12 +35,11 @@ h3 {
     color: rgb(90, 180, 220);
 }
 
-
-/* items below move to left column on standard display */
 /* note: all items are centered on smaller screens */
+
 #image-container {
-    width: 325px;
-    margin: 2rem auto;
+    width: 80%;
+    margin: 6rem auto;
 }
 
 #image-container img {
@@ -45,21 +48,14 @@ h3 {
 }
 
 #contact embed {
-    margin-top: 1rem;
-    width: 325px;
+    width: 100%;
 }
 
-
-/* items below move to center column on standard display */
 #about-me {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-width: 300px;
-}
-
-ul {
-    padding: 0;
+    margin: 4rem
 }
 
 #links a {
@@ -71,25 +67,84 @@ ul {
 }
 
 
-@media only screen and (min-width: 992px) {
+@media only screen and (orientation: landscape) {
+    body {
+        font-size: 16px;
+    }
+    
     main {
         display: grid;
-        grid-template-columns: 365px 1fr 1fr;  
+        grid-template-columns: 24rem 1fr 1fr;  
     }
 
     #image-container {
         margin: 2rem 0 2rem 2rem;
     }
 
+    /* items below move to center column on standard display */
     #about-me {
         display: block;
         max-width: 1100px;
         min-width: 500px;
-        margin: 1rem 2rem;   
+        margin:  1rem 0;   
         text-align: left;
     }
 
-    ul {
-        padding: 5px;
+    h1 {
+        font-size: 2rem;
     }
+    
+    h2 {
+        font-size: 1.33rem;
+    }
+    
+    h3 {
+        width: 100%
+    }
+
+    p {
+        max-width: 450px;
+    }
+    
+}
+
+@media (pointer:fine) {
+    body {
+        font-size: 16px;
+    }
+    
+    main {
+        display: grid;
+        grid-template-columns: 24rem 1fr 1fr;  
+    }
+
+    #image-container {
+        margin: 2rem 0 2rem 2rem;
+    }
+
+    /* items below move to center column on standard display */
+    #about-me {
+        display: block;
+        max-width: 1100px;
+        min-width: 500px;
+        margin:  1rem 0;   
+        text-align: left;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+    
+    h2 {
+        font-size: 1.33rem;
+    }
+    
+    h3 {
+        width: 100%
+    }
+
+    p {
+        max-width: 450px;
+    }
+    
 }
